# myrep

./: .gitignore  README.md  new.html
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/config/: env_config.py
backend/app/core/: extensions.py
backend/app/database/: models.py
backend/app/ext/: sqlmodel.py
backend/app/routers/: __init__.py  menu.py
backend/app/services/: order_services.py  product_services.py  shop_services.py
backend/tests/: conftest.py
frontend/: new.html
frontend/coffee-shop/: package-lock.json  package.json
frontend/coffee-shop/src/app/: page.tsx
frontend/css/: styles.css
